# kalanjiyam

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  buf.yaml  build.rs  clippy.toml  requirements-bench.txt
.clinerules/: create-pull-request.md
.codex/skills/create-pull-request/: SKILL.md
.codex/skills/create-pull-request/agents/: openai.yaml
.codex/skills/create-pull-request/references/: pr-body-template.md
.cursor/rules/: create-pull-request.mdc
.github/: copilot-instructions.md
.github/scripts/: validate_commit_messages.sh
.github/workflows/: rust.yml  validate.yml
Learnings/: Skills.md
benches/: sevai_tcp_bench.rs
benchmarks/: __init__.py  __main__.py  run-benchmark.sh  tcp_bench.py  wrapper.py
benchmarks/configs/: mixed-balanced.conf  mixed-delete-heavy.conf  mixed-no-scan.conf  mixed-read-heavy.conf  mixed-write-heavy.conf  pure-delete.conf  pure-get.conf  pure-put.conf  pure-scan.conf
benchmarks/server/: default.toml
benchmarks/tests/: __init__.py  coverage_check.py  test_tcp_bench.py
crates/pezhai/: Cargo.toml
crates/pezhai-sevai/: Cargo.toml  build.rs
crates/pezhai-sevai/proto/: sevai.proto
crates/pezhai-sevai/src/: adapter.rs  lib.rs  main.rs
crates/pezhai-sevai/tests/: integration.rs
crates/pezhai-sevai/tests/integration/: sevai.rs
crates/pezhai/src/: config.rs  error.rs  idam.rs  iyakkam.rs  lib.rs  nilaimai.rs  pani.rs  pathivu.rs  sevai.rs
docs/ai/: create-pull-request.md  pull-request-body-template.md
docs/arch/: pezhai.md  sevai.md  workspace.md
docs/pezhai/: storage-engine.md
docs/specs/: pezhai.md  sevai.md  tcp-rpc.md
docs/specs/pezhai/: server.md  storage-engine.md  tcp-rpc.md
src/: error.rs  lib.rs  main.rs
src/pezhai/: codec.rs  config.rs  durable.rs  engine.rs  types.rs
src/sevai/: benchmark.rs  mod.rs  owner.rs  proto_map.rs  tcp.rs  worker.rs
tests/: integration.rs  smoke.rs
tests/integration/: cli_matrix.rs  common.rs  foundation_matrix.rs  server_matrix.rs  storage_engine_matrix.rs  tcp_matrix.rs
