[package]
name = "pezhai"
version = "0.1.0"
edition = "2024"
description = "Pezhai storage engine library and sevai runtime for kalanjiyam"
license = "MIT"
publish = false

[dependencies]
crc = "3.3.0" # Compute the CRC32C checksums required by the durable-format specification.
serde = { version = "1.0.228", features = ["derive"] } # Deserialize the shared TOML config.
tokio = { version = "1.51.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] } # Drive the async engine/server APIs and the current runtime tasks.
toml = "1.1.2" # Parse the semantic config.toml input used at startup.
